testdata/baselines/reference/submodule/conformance/importDeferDeclaration.errors.txt
b.ts(1,19): error TS1005: 'from' expected.
b.ts(1,19): error TS1141: String literal expected.
b.ts(1,22): error TS1005: ';' expected.
b.ts(1,22): error TS2304: Cannot find name 'from'.
b.ts(3,24): error TS2503: Cannot find namespace 'ns'.


==== a.ts (0 errors) ====
    export interface Foo {
      x: number;
    }
    
==== b.ts (5 errors) ====
    import defer * as ns from "./a.js";
                      ~~
!!! error TS1005: 'from' expected.
                      ~~
!!! error TS1141: String literal expected.
                         ~~~~
!!! error TS1005: ';' expected.
                         ~~~~
!!! error TS2304: Cannot find name 'from'.
    
    export type X = { foo: ns.Foo };
                           ~~
!!! error TS2503: Cannot find namespace 'ns'.
    